20-sg-rules/catalogue.tf
resource "aws_security_group_rule" "catalogue_bastion" {
  type = "ingress"
  from_port = local.common_port
  to_port = local.common_port
  protocol = "tcp"
  source_security_group_id = local.bastion_sg_id
  security_group_id = local.catalogue_sg_id
}

resource "aws_security_group_rule" "catalogue_bastion_common" {
  type = "ingress"
  from_port = local.http_port
  to_port = local.http_port
  protocol = "tcp"
  source_security_group_id = local.backend_alb_sg_id
  security_group_id = local.catalogue_sg_id
}
